refactor (#68) :: toList();로 단순화